# sis-remapper

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
asm_try/: Cargo.toml
asm_try/src/: m512.rs  main.rs
config-parse/: Cargo.toml
config-parse/src/: combinators.rs  lexer.rs  lib.rs  parser.rs  statement.rs  token.rs
icue-bindings/: build.rs  cargo.toml
icue-bindings/src/: lib.rs  sys.rs  types.rs
sis-core/: Cargo.toml
sis-core/src/: lib.rs
sis-remapper/: Cargo.toml
sis-remapper/benches/: light_effects.rs
sis-remapper/src/: corsair.rs  hotkey_handler.rs  lib.rs  main.rs  ripple_effect.wgsl  simd_corsair.rs  static_effect.wgsl  wave_effect.wgsl  wgpu_corsair.rs
sis-remapper/src/corsair/: effects.rs  test_exposer.rs
sis-remapper/src/hotkey_handler/: keys.rs
sis-remapper/src/simd_corsair/: simd_effects.rs
sis-remapper/src/simd_corsair/simd_effects/: m512.rs
sis-remapper/src/wgpu_corsair/: test_exposer.rs  wave_effects.rs
sis-remapper/tests/: playground.rs
