[package]
name = "sis-remapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
ctrlc = "3.4.4"
icue-bindings = { path = "../icue-bindings" }
config-parse = { path = "../config-parse" }
sis-core = { path = "../sis-core" }
serde_json = "1.0.114"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]
