[package]
name = "sis-remapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
ctrlc = "3.4.4"
icue-bindings = { path = "../icue-bindings" }
config-parse = { path = "../config-parse" }
sis-core = { path = "../sis-core" }
serde_json = "1.0.114"
wgpu = { git = "https://github.com/Calcoph/te-wgpu", rev = "6bb30b0" }
pollster = "0.3.0"
bytemuck = { version = "1.16.1", features = ["derive"]}
pod = "0.5.0"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "light_effects"
harness = false

[features]
default = ["testable_privates"] # Uncomment to make rust-analyzer happy, but always comment before commit
testable_privates = []
